OO-6094: export a CP as PDF via AthenaPDF